--- a/src/layouts/Layout.astro
+++ b/src/layouts/Layout.astro
@@ -58,6 +58,12 @@ const { title } = Astro.props;
     --white-icon-tr: #f3f3f310;
   }
 
+  html,
+  body {
+    overflow-x: hidden;
+    max-width: 100vw;
+  }
+
   * {
     font-family:
       "montserrat",
